<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard_item"
            android:checked="true"
            android:icon="@drawable/dashboard_black"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/attendance_item"
            android:checked="false"
            android:icon="@drawable/attendance"
            android:title="@string/attendance" />

        <item
            android:id="@+id/monthly_report_item"
            android:checked="false"
            android:icon="@drawable/evaluate"
            android:title="@string/monthlyreport" />

        <item
            android:id="@+id/sliptest_item"
            android:checked="false"
            android:icon="@drawable/evaluate"
            android:title="@string/sliptest" />

        <item
            android:id="@+id/homework_item"
            android:checked="false"
            android:icon="@drawable/homework"
            android:title="@string/homework" />

        <item
            android:id="@+id/exam_item"
            android:checked="false"
            android:icon="@drawable/evaluate"
            android:title="@string/exam" />

        <item
            android:id="@+id/students_item"
            android:checked="false"
            android:icon="@drawable/profile"
            android:title="@string/students" />

        <item
            android:id="@+id/sms_item"
            android:checked="false"
            android:icon="@drawable/sms"
            android:title="@string/sms" />

    </group>
</menu>