<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/breadcrum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark_black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/heading_selector"
            android:contentDescription="@string/cc"
            android:onClick="toDashbord"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:src="@drawable/dashboard" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#666363" />

        <Button
            android:id="@+id/voiceSms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/heading_selector"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/voice_sms"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#666363" />

        <Button
            android:id="@+id/uploadVoiceSms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_blue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/upload"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <View
        android:id="@+id/dividerup"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0.5"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/customName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:hint="@string/custom_name"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <ImageView
        android:id="@+id/mic"
        android:layout_width="130dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/microphone" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/light_black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/start"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_enabled_light_blue"
                android:enabled="true"
                android:text="@string/record"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/stop"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_enabled_light_blue"
                android:enabled="false"
                android:text="@string/stop_rec"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/play"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_enabled_light_blue"
                android:enabled="false"
                android:text="@string/play"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/stopPlay"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_enabled_light_blue"
                android:enabled="false"
                android:text="@string/stop_play"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/upload"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_enabled_light_blue"
                android:enabled="false"
                android:text="@string/upload"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_enabled_light_blue"
                android:enabled="false"
                android:text="@string/delete"
                android:textColor="#FFFFFF" />
        </TableRow>

    </TableLayout>

</LinearLayout>