<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/breadcrum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark_black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/heading_selector"
            android:contentDescription="@string/cc"
            android:onClick="toDashbord"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:src="@drawable/dashboard" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#666363" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/dark_black"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/profile"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dash_seperator" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/layoutbelowBC"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/studName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studentname"
                android:textColor="@color/dark_black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/studClasSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:text="@string/attendinfo"
                android:textColor="@color/dark_black"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/dash2ndnav"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@drawable/left_curve"
            android:gravity="center"
            android:text="@string/profile"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#8A8889" />

        <TextView
            android:id="@+id/slipSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/sliptest"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#8A8889" />

        <TextView
            android:id="@+id/seSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/se"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#8A8889" />

        <TextView
            android:id="@+id/attSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/attendance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/roll_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/roll_no"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/admission_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/admission_no"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/father_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/father"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/mother_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mother"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:clickable="true">

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="@string/dob"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/mobile1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile1"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/mobile2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile2"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>