<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/breadcrum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dark_black"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/heading_selector"
            android:contentDescription="@string/cc"
            android:onClick="toDashbord"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:src="@drawable/dashboard" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#666363" />

        <Button
            android:id="@+id/voiceSms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/heading_selector"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/sms"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#666363" />

        <Button
            android:id="@+id/history_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_blue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/history"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <View
        android:id="@+id/dividerup"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/layoutbelowBC"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:text="@string/message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_black" />

        <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:background="#333333" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_black" />

        <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:background="#333333" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/to"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/light_black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" />
    
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

</LinearLayout>
